# cy-bee

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ingest.rs  mod.rs  models.rs  query.rs
src-tauri/src/rag/: csv_loader.rs  embeddings.rs  mod.rs
