[package]
name = "cy-bee"
version = "0.1.0"
description = "Customer Inights & Discovery RAG Terminal"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cy_bee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RAG & LLM
rig-core = { version = "0.11", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

# CSV processing
csv = "1.3"
calamine = { version = "0.24", features = ["dates"] }

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"

